[package]
name = "world-chain-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
world-chain-pool.workspace = true
world-chain-primitives.workspace = true

# reth
reth-chainspec.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-transaction-pool.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-api.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-storage-api.workspace = true
reth-node-builder.workspace = true
reth-tasks.workspace = true
reth-chain-state.workspace = true
reth-revm.workspace = true
reth-trie.workspace = true

# op-reth
reth-optimism-rpc.workspace = true
reth-optimism-node.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-evm.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rlp.workspace = true
alloy-genesis.workspace = true
alloy-network.workspace = true

op-alloy-rpc-types.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types-engine.workspace = true
op-alloy-consensus.workspace = true

# revm
revm-primitives.workspace = true
revm-bytecode.workspace = true
revm-database.workspace = true
revm-inspectors.workspace = true
revm-interpreter.workspace = true

# tokio
tokio.workspace = true

# misc
tracing.workspace = true
jsonrpsee.workspace = true
jsonrpsee-core.workspace = true
jsonrpsee-types.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
eyre.workspace = true
async-trait.workspace = true
serde.workspace = true
sha1 = "0.10"
md5 = "0.7"
